@@ -372,9 +372,13 @@ def fuMain(asArguments):
   elif oBugId.oBugReport is not None:
     print "+ A bug was detected in the application.";
     print;
+    print "  === BugId report (https://github.com/SkyLined/BugId) ".ljust(80, "=");
     print "  Id:               %s" % oBugId.oBugReport.sId;
     print "  Description:      %s" % oBugId.oBugReport.sBugDescription;
     print "  Location:         %s" % oBugId.oBugReport.sBugLocation;
+    print "  Version:          %s" % oBugId.oBugReport.asVersionInformation[0]; # There is always the process' binary.
+    for sVersionInformation in oBugId.oBugReport.asVersionInformation[1:]: # There may be two if the crash was in a
+      print "                    %s" % sVersionInformation;                # different binary (e.g. a .dll)
     if oBugId.oBugReport.sBugSourceLocation:
       print "  Source:           %s" % oBugId.oBugReport.sBugSourceLocation;
     print "  Security impact:  %s" % oBugId.oBugReport.sSecurityImpact;
